[package]
name = "black-box-cat-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
actix-web-prom = "0.6.0-beta.3"
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
actix-rt = "2"
tokio = "1"
wiremock = "0.5"
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1"
# The prometheus-parse crate is not yet published to crates.rs
prometheus-parse = { git = "https://github.com/ccakes/prometheus-parse-rs", rev = "a4574e9" }